@@ -7,6 +7,7 @@
   * Object#is_a now uses the instanceof operator
   * Add global extend method
   * Object#super must be called from inside of an instance method
+  * Remove Object#instance_extended_* methods
 
 2009-03-11 - Sean Huber (shuber@huberry.com)
   * Rename to phby
